pushing kevin css

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # No need for DATABASE_URL to be set if developing from within a devcontainer
 
-SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u90818734902139489230
+SECRET_KEY=<<"YOUR SECRET KEY">>
 DATABASE_URL=sqlite:///dev.db
 SCHEMA=flask_schema
+S3_BUCKET = <<"S3 BUCKET">>
+S3_KEY = <<"S3_KEY">>
+S3_SECRET = <<"YOUR S3 SECRET">>
